write down index.Rmd

--- a/rmarkdown.yml
+++ b/rmarkdown.yml
@@ -1,3 +1,9 @@
+# Render Rmarkdown
+
+# usethis::use_github_action("render-rmarkdown")
+
+# This example automatically re-builds any Rmarkdown file in the repository whenever it changes and commits the results to the master branch.
+
 # Workflow derived from https://github.com/r-lib/actions/tree/master/examples
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
