--- a/.github/workflows/aosvcenal-static-deploy.yml
+++ b/.github/workflows/aosvcenal-static-deploy.yml
@@ -2,9 +2,9 @@
 name: Deploy static content of the Abbandonate ogni speranza voi che entrate nell Algebra lineare to GitHub Pages
 run-name: Deploying statically.
 on:
-  # Runs on pushes targeting the default branch
+  # Runs on pushes targeting the main branch
   push:
-    branches: [$default-branch]
+    branches: main
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
